Fixing sorting on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 
 .player-info {
     margin-bottom: 10px;
+    font-size: 18px;
 }
 
 .player-controls input, .player-controls button {
@@ -44,7 +45,7 @@ input[type="text"] {
         padding: 15px;
     }
     .player-info {
-        font-size: 18px;
+        font-size: 20px;
     }
     .player-controls input, .player-controls button {
         font-size: 18px;
